[gd_scene load_steps=4 format=3 uid="uid://cub3bm7qxs1kn"]

[ext_resource type="Script" uid="uid://bp3xktvfskgki" path="res://addons/ThemeEditor/stylebox_preset_editor.gd" id="1_134xu"]
[ext_resource type="Texture2D" uid="uid://cjct6oh8b1nyb" path="res://addons/ThemeEditor/icon_duplicate.svg" id="2_i4lgl"]
[ext_resource type="Texture2D" uid="uid://dl72oslti4imj" path="res://addons/ThemeEditor/icon_close.svg" id="3_883ou"]

[node name="StyleboxEditor" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_134xu")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2

[node name="preset_name_input" type="LineEdit" parent="MarginContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "<null>"
placeholder_text = "preset name"
expand_to_text_length = true

[node name="show_preset_details_button" type="Button" parent="MarginContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
text = "<"

[node name="duplicate_stylebox_button" type="Button" parent="MarginContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("2_i4lgl")

[node name="remove_preset_button" type="Button" parent="MarginContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("3_883ou")

[node name="Tree" type="Tree" parent="MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 325)
layout_mode = 2
columns = 2
hide_root = true
